civo-deploy/aaa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaa-deployment
  namespace: aaa-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aaa
  template:
    metadata:
      labels:
        app: aaa
    spec:
      containers:
        - name: standard-website
          image: imp2/standard-website:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aaa-service
  namespace: aaa-ns
spec:
  selector:
    app: aaa
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
