civo-deploy/bbb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbb-deployment
  namespace: aaa-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb
  template:
    metadata:
      labels:
        app: bbb
    spec:
      containers:
        - name: gradio-text-converter
          image: imp2/gradio-text-converter:latest
          ports:
            - containerPort: 7860
---
apiVersion: v1
kind: Service
metadata:
  name: bbb-service
  namespace: aaa-ns
spec:
  selector:
    app: bbb
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 7860
