civo-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imp-ingress
  namespace: aaa-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: 29137147-cf8f-4673-a55a-028b2b89af31.lb.civo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aaa-service
                port:
                  number: 8081
          - path: /k2
            pathType: Prefix
            backend:
              service:
                name: bbb-service
                port:
                  number: 8082
